node-main/deps/v8/test/message/fail/nfe-yield-generator.out
*%(basename)s:5: SyntaxError: Unexpected identifier 'yield'
(function* yield() {})
           ^^^^^
SyntaxError: Unexpected identifier 'yield'
